--- a/CG/templates/base.html
+++ b/CG/templates/base.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <!-- Future Content here -->
-    <div class="container">
+    <div class="container" id="alerts">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
         {% for category, message in messages %}
