download file made temporary

--- a/CG/templates/index.html
+++ b/CG/templates/index.html
@@ -19,7 +19,7 @@ Find group of companies-Sypher Solutions
     
     {% if isPrepared %}
     <br>
-    <a href="{{ url_for('downloadFile') }}" class="btn btn-lg btn-success" target="_blank">Download File</a>
+    <a href="{{ url_for('downloadFile') }}" class="btn btn-lg btn-success">Download File</a>
     {% endif %}
 </div>
 {% endblock %}
