added tutorial page

--- a/CG/templates/base.html
+++ b/CG/templates/base.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">How to use</a>
+                    <a class="nav-link active" href="{{ url_for('tutorial') }}">How to use?</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
