--- a/CG/templates/contact.html
+++ b/CG/templates/contact.html
@@ -5,5 +5,13 @@ Contact-Sypher Solutions
 {% endblock %}
 
 {% block body %}
-This is the contact page
+<br>
+<div class="container">
+    <blockquote class="blockquote text-center">
+
+        <p class="mb-0"><strong>Under construction</strong></p>
+        <!-- <p class="mb-0">To contact for feature requests/bug reports, mail at <strong>pandeyanshu36@gmail.com</strong></p> -->
+      </blockquote>
+</div>
+
 {% endblock %}
